# master-thesis

./: .gitignore  .pixi.lock.icloud  CHANGES_template.md  CITATION  README.md  environment.yml  opening_pixi.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
docs_template/source/: conf.py
docs_template/source/background/: dag.md  directory_structure.md  running_example.md
docs_template/source/development/: how-to-contribute.md
docs_template/source/getting_started/: customising_the_template.md  preparing_your_system.md
docs_template/source/guides_explanations/: hooks.md
documents/: paper.tex  presentation.tex  refs.bib  start_writing.md  task_documents.py
src/life_cycle_model/: model_functions.py  parameters.py  parameters_and_grids.py  regimes_and_model.py  task_lcm.py  transition_functions.py
src/replication_laibsonetal/: config.py
src/replication_laibsonetal/analysis/: mc_results.py  simulate_distribution.py  task_analysis_template.py  task_mc_results.py
src/replication_laibsonetal/data/: usa_00003.dta
src/replication_laibsonetal/data_management/: task_data_management_template.py
src/replication_laibsonetal/errors/: error1_handling.py  error1_lcm.py  error2_handling.py  error2_lcm.py  error3_lcm.py  error_constraints_functions.py  error_grids.py  error_regimes_and_model.py
src/replication_laibsonetal/extension/: my_constraints_functions.py  my_lcm.py  my_model_functions.py  my_parameters_and_grids.py  my_regimes_and_model.py  my_transition_functions.py
src/replication_laibsonetal/final/: hardcoded_data.py  moments_calculation.py  msm_functions.py  simulate_model.py  task_final.py  task_final_template.py  testing.py
src/replication_laibsonetal/life_cycle_model/: constraints_functions.py  error.py  looking_for_the_error.ipynb  model_functions.py  notes.md  parameters_and_grids.py  regimes_and_model.py  short_model_2find_mistake.ipynb  task_lcm.py
src/replication_laibsonetal/life_cycle_model/debug/simulate_snapshot_001/: REPRODUCE.md  initial_conditions.pkl  metadata.json  model.pkl  params.pkl  result.pkl
src/replication_laibsonetal/life_cycle_model/debug/simulate_snapshot_002/: REPRODUCE.md  model.pkl  result.pkl
src/replication_laibsonetal/life_cycle_model/debug/solve_snapshot_001/: REPRODUCE.md  arrays.h5  metadata.json  model.pkl  params.pkl
src/replication_laibsonetal/life_cycle_model/debug/solve_snapshot_003/: REPRODUCE.md  model.pkl
src/replication_laibsonetal/life_cycle_model/debug/solve_snapshot_004/: REPRODUCE.md  model.pkl  pyproject.toml
src/replication_laibsonetal/life_cycle_model/debug/solve_snapshot_005/: REPRODUCE.md  model.pkl
src/replication_laibsonetal/lifecycle_model/: constraints_functions.py  error.py  extension_02.py  extra_graphs.py  lcm.py  looking_for_the_error.ipynb  model_functions.py  my_extension.py  notes.md  parameters_and_grids.py  regimes_and_model.py  short_model_2find_mistake.ipynb  task_lcm.py  transition_functions.py
src/replication_laibsonetal/moments/: simulate_model.py
tests/: test_template.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_stats4schools_smoking.py
