# ======================================================================================
# Project metadata
# ======================================================================================

[project]
name = "replication_laibsonetal"
description = "Replication of paper Laibson et al 2024"
requires-python = ">=3.12"
dynamic = ["version"]
keywords = [
    "Reproducible Research",
    "Economics",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
authors = [
    { name = "Brenda Torres Blomer", email = "s33btorr@uni-bonn.de" },
]
maintainers = [
    { name = "Brenda Torres Blomer", email = "s33btorr@uni-bonn.de" },
]
dependencies = ["pylcm @ git+https://github.com/OpenSourceEconomics/pylcm.git@main?rev_type=rev"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Changelog = "https://github.com/s33btorr/master-thesis.git"
Documentation = "https://github.com/s33btorr/master-thesis.git"
Github = "https://github.com/s33btorr/master-thesis.git"
Tracker = "https://github.com/s33btorr/master-thesis.git/issues"

# ======================================================================================
# Build system configuration
# ======================================================================================

[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/replication_laibsonetal/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

# ======================================================================================
# Pixi configuration
# ======================================================================================

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "~=3.14.0"
jupyterlab = "*"
pre-commit = "*"
pyarrow = "*"
pytask  = ">=0.5.0"
pytask-latex = ">=0.4.3"
pytask-parallel = ">=0.5.0"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
statsmodels = "*"
numpy = "*"
pandas = ">=2.2"
plotly = ">=6.1.1"
matplotlib = "*"
seaborn = "*"
scipy = "*"

[tool.pixi.feature.cuda12]
platforms = ["linux-64"]

[tool.pixi.feature.cuda12.target.linux-64.dependencies]
cuda-nvcc = "~=12.0"

[tool.pixi.feature.cuda12.target.linux-64.pypi-dependencies]
jax = { version = ">=0.9", extras = ["cuda12"] }

[tool.pixi.environments]
cuda12 = { features = ["cuda12"] }

[tool.pixi.pypi-dependencies]
replication_laibsonetal = {path = ".", editable = true}
pdbp = "*"
kaleido = ">=1.1"
xlrd = "*"
ipykernel = "*"
pylcm = { git = "https://github.com/OpenSourceEconomics/pylcm.git", rev = "main" }

# ======================================================================================
# Pytask configuration
# ======================================================================================

[tool.pytask.ini_options]
paths = ["./src/replication_laibsonetal", "./documents"]
pdbcls = "pdbp:Pdb"

# ======================================================================================
# Ruff configuration
# ======================================================================================

[tool.ruff]
target-version = "py314"
fix = true

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "ANN",  # Missing type annotations
    "COM812", # Conflict with ruff-format
    "D10",  # Missing docstrings
    "ISC001", # Conflict with ruff-format
    "PD901", # df is a great name with functional data management
    "PLR0913",  # Too many arguments in function definition
    "RET504", # Don't force to calculate upon return
    "S101",  # Use of `assert` detected.
    "S301",  # pickle module is unsafe
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PD011"]
"task_*.py" = ["ANN", "ARG001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ======================================================================================
# Miscellaneous tools configuration
# ======================================================================================


[tool.pytest.ini_options]
addopts = "--pdbcls=pdbp:Pdb"
filterwarnings = []
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = ["docs"]


[tool.yamlfix]
line_length = 88
none_representation = "null"
